2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the TLS memory allocator.

	* lib/mtalpha-sim/include/stdlib.h: Rename the `fast_XXX' macros
	to `excl_dlXXX' to clarify their meaning.

	* lib/src/tlsmalloc/tls_arch_mtalpha.h: Use them. Also, use the
	new MGSim mmap/munmap interface to manage storage.

	* lib/src/tlsmalloc/tlsmalloc.c: Place the count of superblocks at
	the first word, since this has a special behavior on the Microgrid
	(permissions are not checked for the first word of TLS, so it can
	be read to 0 without error). Also, map and count the control block
	itself. Rename the `mallinfo' services to `stats', since
	`mallinfo' has special semantics not supported yet. 

	* lib/src/tlsmalloc/tlsmalloc.h,
	* lib/src/tlsmalloc/tlsmalloc.c: Fix interface of `calloc'.

	* lib/src/tlsmalloc/tricks.h: Fix `forceinline'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the SL/MGSim interface.

	The Microgrid simulator was recently modified to allow programs to
	interact more with the simulation. With the increased functionality,
	some extra encapsulation in the library becomes needed.

	* tools/include/svp/mgsim.h: New. Encapsulates accesses to MGSim
	control functions.
	* tools/Makefile.am: List the new file.

	* tools/include/svp/abort.h,
	* tools/include/svp/testoutput.h,
	* lib/include/svp/gfx.h: Use it.
	
	* lib/src/exit.c: New.
	* lib/mtalpha.mk: List the new file.
	* lib/mtalpha-sim/include/stdlib.h: Declare `exit' and `_Exit'.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance TLS memory allocator.

	* lib/src/tlsmalloc/Makefile.am,
	* lib/src/tlsmalloc/tls_arch_mtalpha.h,
	* lib/src/tlsmalloc/tls_arch_pthread.h,
	* lib/src/tlsmalloc/tlsconfig.h,
	* lib/src/tlsmalloc/tlsmalloc.c,
	* lib/src/tlsmalloc/tlsmalloc.h,
	* lib/src/tlsmalloc/tlsmcheck.c: Improve.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Initial implementation of TLS memory allocator.

	* lib/src/tlsmalloc/Makefile.am,